--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.11",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "openai": "^4.86.2",
